Many warnings removed